# Desktop_planner

./: meson.build  planner_ai_context.md  planner_development_plan.md  pyproject.toml  update_1.md  update_2.md  update_3.md
packaging/: build_appimage.sh  desktop-planner.in  org.example.DesktopPlanner.desktop  org.example.DesktopPlanner.flatpak.yml
src/desktop_planner/: __init__.py  __main__.py  database.py  dates.py  mcp_server.py  models.py  notifications.py  paths.py  ui.py
tests/: conftest.py  test_database.py  test_dates.py  test_models.py  test_notifications.py  test_packaging.py  test_paths.py  test_ui_smoke.py
